--- a/src/app/rawmaterials/display-rawmaterial-orders/display-rawmaterial-orders.component.html
+++ b/src/app/rawmaterials/display-rawmaterial-orders/display-rawmaterial-orders.component.html
@@ -31,7 +31,7 @@
                         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                         <div class="col-lg-2"><br><br><br><input type="checkbox" (click)="changestatus(); SetMaxDate()">
                                 Show
-                                Calendar<br></div>
+                                Calendar<br><br><input type="submit" value="submit" (click)="getRawMaterial()"><br></div></div>
 
                         <div *ngIf="!(showdate); then thenBlock else elseBlock"></div>
                         <ng-template #thenBlock>
@@ -45,24 +45,20 @@
                         <ng-template #elseBlock>
                         </ng-template>
 
-                </div>
+                
 
-                <div class="container"><br><br><br><br>
-                        <div style="width:500px;" align="right">
 
-                                <input type="submit" value="submit" (click)="getRawMaterial()"><br></div>
-                </div> 
 <br>
 
 
                 <!-- <div *ngIf ="!isDataFetched"> -->
-                <div class="alert alert-info" *ngIf ="!isDataFetched">
+                <div class="alert alert-info container wrapper" *ngIf ="!isDataFetched">
                         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <strong>{{ message }}</strong>
                       </div>
                     
-                <div *ngIf="isDataFetched">
+                <div class="container wrapper" *ngIf="isDataFetched">
                         
-                                <div class="table-responsive">
+                                <div class="table-responsive{-xsm-sm|-md|-lg|-xl} container wrapper">
 
                                                 <table class="table table-striped table-bordered table-fixed table-hover table-condensed" style="border:0px; " id="myTable3">
                                                   <thead>
@@ -82,7 +78,7 @@
                                         </tr>
                                 </thead>
                                 </table>
-                                <div *ngFor="let rmo of rmos" class="table-responsive" class ="table-responsive{-sm|-md|-lg|-xl}">
+                                <div *ngFor="let rmo of rmos" class="container wrapper" class ="table-responsive{-xsm-sm|-md|-lg|-xl}">
                                                 <table class="table table-striped table-bordered table-fixed table-hover table-condensed" style="border:0px; " id="myTable3">
                                                                 <tbody>
                                                                   <tr>
@@ -96,7 +92,7 @@
                                                         <td><div class="col-lg-0.5">{{rmo.dateOfDelivery | date :'yyyy-MM-dd'}}</div></td>
                                                         <td><div class="col-lg-1">{{rmo.pricePerUnit}}</div></td>
                                                         <td><div class="col-lg-1">{{rmo.totalPrice}}</div></td>
-                                                        <td><div class="col-lg-1">{{rmo.deliveryStatus}}</div></td>
+                                                        <td><div class="col-lg-1.25">{{rmo.deliveryStatus}}</div></td>
                                                        
                                                 </tr>
 
