--- a/src/app/products/update-product-order/update-product-order.component.html
+++ b/src/app/products/update-product-order/update-product-order.component.html
@@ -27,6 +27,17 @@
 <br>
     <button type="submit"class="btn btn-primary" (click) = 'getMessage()'>Update Order</button>
 </div>
+<br>
+    <div class="container">
+      <div class="alert"
+           [ngClass]="{
+    'alert-info': !(message === 'Product Order ID does not exist'),
+    'alert-danger': (message === 'Product Order ID does not exist')
+  }"
+           *ngIf='isUpdateProductOrderFetched'>
+        <strong name='outputbox'>{{ message }}</strong>
+      </div>
+    </div>
 
 <div class="container">
     <div class="alert alert-info" *ngIf = 'isUpdateProductOrderFetched'>
