--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -16,17 +16,17 @@
 						<div class="input-group mb-3">
 							<div class="input-group-append">
 							</div>
-							<input type="text" name="username" placeholder="username" [(ngModel)]="usernameVar" id="username" required />
+							<input type="text" name="username" id="username" placeholder="username" [(ngModel)]="usernameVar" id="username" required />
 						</div>
 						
 						<div class="input-group mb-2">
 							<div class="input-group-append">
 
 							</div>
-							<input type="password" name="password" placeholder="password" [(ngModel)]="passwordVar" id="password" required />
+							<input type="password" name="password"id="password" placeholder="password" [(ngModel)]="passwordVar" id="password" required />
 						</div>
 					</div>
-					<button type="submit" (click)="getMessage()">Login</button>
+					<button type="submit" name="button" (click)="getMessage()">Login</button>
 					</form> 
 				</div>
 				<div class="d-flex justify-content-center mt-3 login_container">
