--- a/src/app/rawmaterials/place-rawmaterial-orders/place-rawmaterial-orders.component.html
+++ b/src/app/rawmaterials/place-rawmaterial-orders/place-rawmaterial-orders.component.html
@@ -86,7 +86,7 @@
 
         </div>
         <br>
-        <button type="submit" class="btn btn-primary" (click)='getMessage()' [disabled]="!enableButton">Place Order</button>
+        <button type="submit" class="btn btn-primary" (click)='getMessage()'>Place Order</button>
     </form>
 </div>
 
