--- a/src/app/products/display-distributor-details/display-distributor-details.component.html
+++ b/src/app/products/display-distributor-details/display-distributor-details.component.html
@@ -9,7 +9,7 @@
                 </p>
             </label> <select class="form-control" name="DistributorID" [(ngModel)]="DistributorID" required>
 
-                <option value="1">1</option>
+                <option value="d001">d001</option>
                 <option value="d002">d002</option>
                 <option value="d003">d003</option>
                 <option value="d004">d004</option>
