--- a/src/app/products/display-distributor-details/display-distributor-details.component.html
+++ b/src/app/products/display-distributor-details/display-distributor-details.component.html
@@ -9,7 +9,7 @@
                 </p>
             </label> <select class="form-control" name="DistributorID" [(ngModel)]="DistributorID" required>
 
-                <option value="1">1</option>
+                <option value="1">d001</option>
                 <option value="d002">d002</option>
                 <option value="d003">d003</option>
                 <option value="d004">d004</option>
@@ -43,7 +43,7 @@
         <br>
         <br>
         <div style="width: 500px;" align="left">
-            <input type="submit" value="submit" (click)="getMessage()"><br>
+            <input type="submit" class="btn btn-dark" value="submit" (click)="getMessage()"><br>
         </div>
         <br>
 
