--- a/src/app/rawmaterials/display-supplier-details/display-supplier-details.component.html
+++ b/src/app/rawmaterials/display-supplier-details/display-supplier-details.component.html
@@ -23,7 +23,7 @@
         <br>
         <br>
         <div style="width: 500px;" align="left">
-            <input type="submit" value="submit" (click)="getMessage()"><br>
+            <input type="submit" class="btn btn-dark" value="submit" (click)="getMessage()"><br>
         </div>
         <br>
 
